Se arreglaron detalles

--- a/src/app/galeria/galeria.page.html
+++ b/src/app/galeria/galeria.page.html
@@ -1,6 +1,9 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>Galeria</ion-title>
+  <ion-toolbar color="Danger">
+      <ion-buttons slot="start">
+        <ion-menu-button autoHide="false"></ion-menu-button>
+        <ion-title >Galeria</ion-title>
+      </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
