--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,9 @@
         <ion-item routerLink="menu-s">
           <ion-icon name="sparkles"></ion-icon>SNACK
         </ion-item>
+        <ion-item routerLink="galeria">
+          <ion-icon name="camera"></ion-icon>GALERIA
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-menu>
